--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -90,8 +90,8 @@ repos:
     - id: script-must-have-extension
       types: [shell, non-executable]
     # Executables should have no extension (strongly preferred)
-    - id: script-must-not-have-extension
-      types: [shell, executable]
+#    - id: script-must-not-have-extension
+#      types: [shell, executable]
 
 # python
 
